--- a/src/components/Settings/Pages/Language/LanguagePage.module.scss
+++ b/src/components/Settings/Pages/Language/LanguagePage.module.scss
@@ -16,6 +16,10 @@
   .language-section {
     display        : flex;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 
   .language-list {
