--- a/src/components/Safari/Safari.module.scss
+++ b/src/components/Safari/Safari.module.scss
@@ -79,6 +79,7 @@
     display     : flex;
     align-items : center;
     margin-right: 10%;
+    opacity     : 0.3;
 
     .divider {
       width           : 1px;
@@ -100,6 +101,7 @@
     display    : flex;
     align-items: center;
     gap        : 5px;
+    opacity    : 0.3;
   }
 
 
