--- a/src/pages/Craft/Craft.module.scss
+++ b/src/pages/Craft/Craft.module.scss
@@ -1,6 +1,12 @@
 .container {
-  max-width: 1300px;
-  margin   : 0 auto;
+  max-width         : 1300px;
+  // height         : 100vh;
+  margin            : 0 auto;
+  display           : flex;
+  flex-direction    : column;
+  align-items       : center;
+  justify-content   : center;
+  gap               : 100px;
 }
 
 .title {
@@ -74,4 +80,67 @@
     width : 64px;
     height: 64px;
   }
+}
+
+
+
+.clicker {
+  display       : flex;
+  flex-direction: column;
+  align-items   : center;
+  gap           : 20px;
+}
+
+.clicker-block {
+  width: 100%;
+}
+
+.clicker-pickaxe {
+  display        : flex;
+  flex-direction : column;
+  justify-content: center;
+  padding        : 20px;
+
+
+  .clicker-pickaxe-container {
+    position: relative;
+    height  : 200px;
+
+    &::before {
+      content         : "";
+      position        : absolute;
+      z-index         : -1;
+      top             : 0;
+      left            : 0;
+      width           : 100%;
+      height          : 100%;
+      background-color: var(--color-crust);
+      mask-image      : url('/src/assets/clicker_tools/wooden_pickaxe.webp');
+      mask-repeat     : no-repeat;
+      mask-position   : center;
+      mask-size       : contain;
+    }
+  }
+
+
+  .clicker-pickaxe-img {
+    width: 100%;
+  }
+}
+
+
+
+.clicker-backdrop {
+  width                 : 100%;
+  display               : flex;
+  flex-direction        : column;
+  align-items           : center;
+  justify-content       : center;
+  transition            : 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  background            : radial-gradient(circle, var(--color-mauve) 0%, transparent 50%);
+  // background-size    : 100%;
+  padding               : 80px;
+  background-position   : 50% 50%;
+  background-repeat     : no-repeat;
+  // aspect-ratio    : 1/1;
 }
