--- a/src/pages/Craft/Craft.module.scss
+++ b/src/pages/Craft/Craft.module.scss
@@ -1,12 +1,13 @@
 .container {
-  max-width         : 1300px;
-  // height         : 100vh;
-  margin            : 0 auto;
-  display           : flex;
-  flex-direction    : column;
-  align-items       : center;
-  justify-content   : center;
-  gap               : 100px;
+  max-width      : 1300px;
+  height         : 100vh;
+  margin         : 0 auto;
+  display        : flex;
+  flex-direction : column;
+  align-items    : center;
+  justify-content: center;
+  gap            : 20px;
+  padding-bottom : 80px;
 }
 
 .title {
