--- a/src/sections/Contacts/Contacts.module.scss
+++ b/src/sections/Contacts/Contacts.module.scss
@@ -10,6 +10,14 @@
     overflow     : hidden;
     transition   : transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.1s ease-in-out;
 
+    a {
+      width          : 100%;
+      height         : 100%;
+      display        : flex;
+      justify-content: center;
+      align-items    : center;
+    }
+
     &:hover {
       transform : scale(1.1);
       box-shadow: 0 0 15px var(--color-mauve-tr);
