--- a/src/pages/Craft/Craft.module.scss
+++ b/src/pages/Craft/Craft.module.scss
@@ -1,13 +1,14 @@
 .container {
-  max-width      : 1300px;
-  height         : 100vh;
-  margin         : 0 auto;
-  display        : flex;
-  flex-direction : column;
-  align-items    : center;
-  justify-content: center;
-  gap            : 20px;
-  padding-bottom : 80px;
+  max-width         : 1300px;
+  // height         : 100vh;
+  margin            : 0 auto;
+  display           : flex;
+  flex-direction    : column;
+  align-items       : center;
+  justify-content   : center;
+  gap               : 20px;
+  padding-bottom    : 80px;
+  padding-top       : 40px;
 }
 
 .title {
@@ -116,7 +117,7 @@
       width           : 100%;
       height          : 100%;
       background-color: var(--color-crust);
-      mask-image      : url('/src/assets/clicker_tools/woodenPickaxe.webp');
+      mask-image      : url('/clicker_tools/woodenPickaxe.webp');
       mask-repeat     : no-repeat;
       mask-position   : center;
       mask-size       : contain;
@@ -148,7 +149,7 @@
       width           : 100%;
       height          : 100%;
       background-color: var(--color-crust);
-      mask-image      : url('/src/assets/clicker_tools/furnace.webp');
+      mask-image      : url('/clicker_tools/furnace.webp');
       mask-repeat     : no-repeat;
       mask-position   : center;
       mask-size       : contain;
